# shell

./: Cargo.toml  examples.sh  gettype.sh  testscript.sh  typedb
src/: cmd_old.rs  command.rs  command_pattern.rs  expr.rs  incubator.rs  interactive.rs  main.rs  morphisms.rs  path.rs  pipeline.rs  process.rs  process_types.rs  pty.rs  quotes.rs
