[package]
name = "shell"
version = "0.1.0"
edition = "2018"

[dependencies]
#r3vi = { git = "https://git.exobiont.de/senvas/lib-r3vi.git" }
r3vi = { path = "../lib-r3vi" }
#nested = { git = "https://git.exobiont.de/senvas/nested.git" }
nested = { path = "../nested/nested" }
laddertypes = { path = "../lib-laddertypes" }
subprocess = "0.2.9"
cgmath = "*"
termion = "2.0.1"
bincode = "*"
libc = "0.2.*"
portable-pty = "0.4.0"
clap = { version = "4.1.6", features = ["derive"] }

[dependencies.async-std]
version = "1.9.0"
features = ["unstable", "attributes"]
